added positive/negative term updates. public=0.2402

--- a/hw2/VSM.ipynb
+++ b/hw2/VSM.ipynb
@@ -23,6 +23,7 @@
     "inverted_filename = 'inverted_file.json'\n",
     "url2content_name = 'url2content.json'\n",
     "url2title_name = 'url2titles.json'\n",
+    "standlexi_name = 'extern/sent_lexicon2.json'\n",
     "\n",
     "doc2url_name = 'news_data_1/NC_1.csv'\n",
     "training_name = 'news_data_1/TD.csv'\n",
@@ -35,15 +36,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_threads = 4\n",
     "MAXCAND = 300\n",
@@ -52,14 +45,8 @@
     "Okapi_b = 0.75\n",
     "Okapi_k3 = 500.\n",
     "\n",
-    "# R_a = 0.85\n",
-    "# R_b = 0.05\n",
-    "# R_c = 0.1\n",
     "\n",
-    "IDF_epsilon = 1e-4\n",
-    "Ngram_weights = {l:1. for l in range(1, 25)}\n",
-    "MAXGRAM = max(Ngram_weights.keys())\n",
-    "print(MAXGRAM)"
+    "IDF_epsilon = 1e-4"
    ]
   },
   {
@@ -75,15 +62,22 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# Ngram_weights = {l:(1. - 0.04*(l-2)) for l in range(1, 25)} 0.49\n",
-    "Ngram_weights = {l:0. for l in range(1, 25)}\n",
+    "Ngram_weights = {}#{l:0. for l in range(1, 25)}\n",
     "Ngram_weights[1] = 1.\n",
     "Ngram_weights[2] = 1.04 #1.04: 5886\n",
     "Ngram_weights[3] = 0.4\n",
-    "# Ngram_weights[2] = 0.88\n",
-    "# Ngram_weights[3] = 0.6"
+    "MAXGRAM = max(Ngram_weights.keys())\n",
+    "print(MAXGRAM)"
    ]
   },
   {
@@ -140,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +202,7 @@
     "IDF = {}\n",
     "for (word, voc) in inverted.items():\n",
     "    ngram = len(word)\n",
-    "    if Ngram_weights[ngram] <= 0:\n",
+    "    if ngram not in Ngram_weights:\n",
     "        continue\n",
     "    i = len(vocab)\n",
     "    vocab[word] = i\n",
@@ -224,13 +218,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "883386b0a5ec402eb68263477cf90e6c",
+       "model_id": "ad567c2c7f6f4ea3897c22b6630b7a70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,13 +257,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76f3c6f290d2433a932046c11dcb1900",
+       "model_id": "98a274b9f3c942059708242346a27fa9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -302,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +411,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standlexicon = json.load(open(standlexi_name, 'r'))\n",
+    "\n",
+    "# print(standlexicon)\n",
+    "\n",
+    "def adjust(q):\n",
+    "    #negative\n",
+    "    found = -1\n",
+    "    for w in standlexicon['negative']:\n",
+    "        index = vocab[w]\n",
+    "        if index in q.vec:\n",
+    "            q.vec[index] *= 1.2\n",
+    "            found = index\n",
+    "            break\n",
+    "    if found != -1:\n",
+    "        for w in standlexicon['negative']:\n",
+    "            index = vocab[w]\n",
+    "            if index != found:\n",
+    "                q.vec[index] = 0.33\n",
+    "        return\n",
+    "    \n",
+    "    #positive\n",
+    "    found = -1\n",
+    "    for w in standlexicon['positive']:\n",
+    "        index = vocab[w]\n",
+    "        if index in q.vec:\n",
+    "            q.vec[index] *= 1.2\n",
+    "            found = index\n",
+    "            break\n",
+    "    if found != -1:\n",
+    "        for w in standlexicon['positive']:\n",
+    "            index = vocab[w]\n",
+    "            if index != found:\n",
+    "                q.vec[index] = 0.33\n",
+    "        return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
@@ -466,27 +511,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5321209105892122\n",
-      "0.5636042046580734\n",
-      "0.5476786125680425\n",
-      "0.5229674122483885\n",
-      "0.5802183766594967\n",
-      "0.6618616985606891\n",
-      "0.6321486392685015\n",
-      "0.7105221146899685\n",
-      "0.6593882926125051\n",
-      "0.8279933977506758\n",
-      "0.5850924574576233\n",
-      "0.8448235086059627\n",
+      "0.575504230740311\n",
+      "0.6036903795433055\n",
+      "0.6733874672136638\n",
+      "0.5199861006972385\n",
+      "0.5957414942795558\n",
+      "0.6698924800999123\n",
+      "0.6211656671104095\n",
+      "0.6881379994190577\n",
+      "0.7004741618140462\n",
+      "0.8003826045757819\n",
+      "0.5125136037479151\n",
+      "0.8143218599558374\n",
       "0.5713745567540826\n",
-      "0.7623995901990883\n",
-      "0.7857883804572791\n",
-      "0.5274236205846091\n",
-      "0.2884595707446423\n",
-      "0.9071764005499712\n",
-      "0.6480561430460704\n",
-      "0.3773925921994312\n",
-      "[NDCG] 0.6268245240102156\n"
+      "0.8070123619642946\n",
+      "0.7847615450816575\n",
+      "0.5158764552272019\n",
+      "0.3141127984112516\n",
+      "0.9100019823285697\n",
+      "0.6890156995883306\n",
+      "0.40706759846147117\n",
+      "[NDCG] 0.6387210523506949\n"
      ]
     }
    ],
@@ -494,15 +539,17 @@
     "if not test:\n",
     "    mean = 0\n",
     "\n",
-    "    for q in train_qlist:\n",
+    "    for q in train_qlist:        \n",
     "        scores = []            \n",
     "        for d in tfdocs.values():\n",
     "            scores.append((d.doc_id, q.match_2(d.tfreq)))\n",
     "            \n",
     "########### feedback\n",
-    "        scores = sorted(scores, key=lambda x: -x[1])\n",
+    "        scores = sorted(scores, key=lambda x: -x[1])        \n",
     "        \n",
+    "        adjust(q)        \n",
     "        q.feedback([d for d, s in scores[:MAXCAND]], [d for d, s in scores[-MAXCAND:]], tfdocs)\n",
+    "        \n",
     "        \n",
     "        scores = []            \n",
     "        for d in tfdocs.values():\n",
@@ -541,23 +588,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = True"
+    "# test = True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query_Index,Query\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load queries\n",
     "if test:\n",
@@ -576,34 +614,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query 1\n",
-      "Query 2\n",
-      "Query 3\n",
-      "Query 4\n",
-      "Query 5\n",
-      "Query 6\n",
-      "Query 7\n",
-      "Query 8\n",
-      "Query 9\n",
-      "Query 10\n",
-      "Query 11\n",
-      "Query 12\n",
-      "Query 13\n",
-      "Query 14\n",
-      "Query 15\n",
-      "Query 16\n",
-      "Query 17\n",
-      "Query 18\n",
-      "Query 19\n",
-      "Query 20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if test:\n",
     "    with open(outcsv_name, 'w') as writer:\n",
@@ -615,15 +626,6 @@
     "\n",
     "        for j,q in enumerate(qlist):\n",
     "            print(\"Query {}\".format(j+1))\n",
-    "\n",
-    "            scores = []\n",
-    "\n",
-    "#             def subtask(d):\n",
-    "#                 return (d.doc_id, q.match(d.tfreq))\n",
-    "\n",
-    "#             with Pool(num_threads) as p:\n",
-    "#                 chunksize = 1000\n",
-    "#                 scores = list(p.imap_unordered(subtask, tfdocs, chunksize=chunksize))\n",
     "            \n",
     "            scores = []\n",
     "            for d in tfdocs.values():\n",
@@ -631,7 +633,8 @@
     "            \n",
     "########### feedback\n",
     "            scores = sorted(scores, key=lambda x: -x[1])\n",
-    "\n",
+    "    \n",
+    "            adjust(q)            \n",
     "            q.feedback([d for d, s in scores[:MAXCAND]], [d for d, s in scores[-MAXCAND:]], tfdocs)\n",
     "\n",
     "            scores = []            \n",
