omit english; changed sentiment function. public 0.2492

--- a/hw2/VSM.ipynb
+++ b/hw2/VSM.ipynb
@@ -10,6 +10,7 @@
     "import math\n",
     "import os\n",
     "import numpy as np\n",
+    "import mafan\n",
     "from tqdm import tqdm_notebook as tqdm\n",
     "from multiprocessing import Pool"
    ]
@@ -20,10 +21,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# !pip install --user mafan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "inverted_filename = 'inverted_file.json'\n",
     "url2content_name = 'url2content.json'\n",
     "url2title_name = 'url2titles.json'\n",
-    "standlexi_name = 'extern/sent_lexicon2.json'\n",
+    "standlexi_name = 'extern/lexicon_mixed.json'\n",
     "\n",
     "doc2url_name = 'news_data_1/NC_1.csv'\n",
     "training_name = 'news_data_1/TD.csv'\n",
@@ -34,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,13 +86,15 @@
     "Ngram_weights[1] = 1.\n",
     "Ngram_weights[2] = 1.04 #1.04: 5886\n",
     "Ngram_weights[3] = 0.4\n",
+    "# Ngram_weights[4] = 0.4\n",
+    "# Ngram_weights[5] = 1.\n",
     "MAXGRAM = max(Ngram_weights.keys())\n",
     "print(MAXGRAM)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,17 +146,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def utf8len(s):\n",
-    "    return len(s.encode('utf-8'))"
+    "    return len(s.encode('utf-8'))\n",
+    "def getngram(w):\n",
+    "    # check if it's chinese\n",
+    "    is_eng = mafan.text.contains_latin(word)\n",
+    "    return 99 if is_eng else len(word)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,46 +201,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "190376\n"
+      "186378\n"
      ]
     }
    ],
    "source": [
     "# load vocab\n",
-    "vocab = {}\n",
-    "IDF = {}\n",
-    "for (word, voc) in inverted.items():\n",
-    "    ngram = len(word)\n",
-    "    if ngram not in Ngram_weights:\n",
-    "        continue\n",
-    "    i = len(vocab)\n",
-    "    vocab[word] = i\n",
-    "    idf = voc['idf']\n",
-    "    N = DOC_SZ / idf\n",
-    "    assert N <= DOC_SZ\n",
-    "    IDF[i] = max(IDF_epsilon, math.log((DOC_SZ - N + 0.5)/(N + 0.5)))\n",
-    "#     IDF[i] = max(IDF_epsilon, math.log(idf))\n",
-    "    \n",
+    "make_vocab = True\n",
+    "vocab_name = 'vocab.json'\n",
+    "\n",
+    "if make_vocab:\n",
+    "    vocab = {}\n",
+    "    IDF = {}\n",
+    "    for (word, voc) in inverted.items():\n",
+    "        ngram = getngram(word)\n",
+    "        if ngram not in Ngram_weights:\n",
+    "            continue\n",
+    "        i = len(vocab)\n",
+    "        vocab[word] = i\n",
+    "#         idf = voc['idf']\n",
+    "#         N = DOC_SZ / idf\n",
+    "#         assert N <= DOC_SZ\n",
+    "#         IDF[i] = max(IDF_epsilon, math.log((DOC_SZ - N + 0.5)/(N + 0.5)))\n",
+    "    json.dump(vocab, open(vocab_name, 'w'))\n",
+    "else:\n",
+    "    vocab = json.load(open(vocab_name, 'r'))\n",
+    "    IDF = {}\n",
+    "\n",
     "VOC_SZ = len(vocab)\n",
     "print(VOC_SZ)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad567c2c7f6f4ea3897c22b6630b7a70",
+       "model_id": "f6bec708316146168942c1974bbabe05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,9 +269,15 @@
    "source": [
     "#load raw tf\n",
     "for i, (word, voc) in tqdm(enumerate(inverted.items()), total=len(inverted)):\n",
-    "    ngram = len(word)\n",
+    "    ngram = getngram(word)\n",
     "    if word not in vocab:\n",
     "        continue\n",
+    "        \n",
+    "    idf = voc['idf']\n",
+    "    N = DOC_SZ / idf\n",
+    "    assert N <= DOC_SZ\n",
+    "    IDF[vocab[word]] = max(IDF_epsilon, math.log((DOC_SZ - N + 0.5)/(N + 0.5)))\n",
+    "    \n",
     "    term_id = vocab[word]\n",
     "    for pair in voc['docs']:\n",
     "        for docname, tf in pair.items():           \n",
@@ -257,13 +286,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98a274b9f3c942059708242346a27fa9",
+       "model_id": "639e7a08ab904d04bdac08911c821c6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,13 +325,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e393273d57f482c828d23dafa795438",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=100000), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "2177.24542\n"
      ]
     }
@@ -314,7 +358,7 @@
     "    avgdl += d.length\n",
     "avgdl /= DOC_SZ\n",
     "\n",
-    "for d in tfdocs.values():\n",
+    "for d in tqdm(tfdocs.values()):\n",
     "    d.normalize(avgdl, IDF)\n",
     "for d in tfdocs.values():\n",
     "    assert d.normalized\n",
@@ -323,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,49 +464,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "standlexicon = json.load(open(standlexi_name, 'r'))\n",
-    "\n",
+    "standlexicon['negative'] = [w for w in standlexicon['negative'] if w in vocab]\n",
+    "standlexicon['positive'] = [w for w in standlexicon['positive'] if w in vocab]\n",
     "# print(standlexicon)\n",
     "\n",
     "def adjust(q):\n",
-    "    #negative\n",
-    "    found = -1\n",
-    "    for w in standlexicon['negative']:\n",
-    "        index = vocab[w]\n",
-    "        if index in q.vec:\n",
-    "            q.vec[index] *= 1.2\n",
-    "            found = index\n",
-    "            break\n",
-    "    if found != -1:\n",
-    "        for w in standlexicon['negative']:\n",
-    "            index = vocab[w]\n",
-    "            if index != found:\n",
-    "                q.vec[index] = 0.33\n",
-    "        return\n",
+    "    qneg = ['反對',  '拒絕',  '不應',  '錯誤',  '不可', '不贊同', '不贊成', '不合理',\n",
+    "            '不對',  '不支持', '不同意', '不應該', '不正確','不可以','不合法' ]\n",
+    "    qpos = ['支持', '同意', '應該', '正確', '可以', '贊同', '贊成', '合理', '合法', '不反對', '對的', '應', '可', '有']\n",
     "    \n",
-    "    #positive\n",
-    "    found = -1\n",
-    "    for w in standlexicon['positive']:\n",
-    "        index = vocab[w]\n",
-    "        if index in q.vec:\n",
-    "            q.vec[index] *= 1.2\n",
-    "            found = index\n",
+    "    stand = None\n",
+    "    key = None\n",
+    "    for s in qneg:\n",
+    "        if s in q.text:\n",
+    "            print(q.text, '[neg]')\n",
+    "            stand = 'neg'\n",
+    "            key = s\n",
     "            break\n",
-    "    if found != -1:\n",
-    "        for w in standlexicon['positive']:\n",
-    "            index = vocab[w]\n",
-    "            if index != found:\n",
+    "    if stand == None:\n",
+    "        for s in qpos:\n",
+    "            if s in q.text:\n",
+    "                print(q.text, '[pos]')\n",
+    "                stand = 'pos'\n",
+    "                key = s\n",
+    "                break\n",
+    "    \n",
+    "    if stand == 'neg':\n",
+    "        if key in vocab:\n",
+    "            index = vocab[key]\n",
+    "            q.vec[index] *= 1.2\n",
+    "        for w in standlexicon['negative']:\n",
+    "            if w != key:\n",
+    "                index = vocab[w]            \n",
     "                q.vec[index] = 0.33\n",
-    "        return"
+    "    elif stand == 'pos':\n",
+    "        if key in vocab:\n",
+    "            index = vocab[key]\n",
+    "            q.vec[index] *= 1.2\n",
+    "        for w in standlexicon['positive']:\n",
+    "            if w != key:\n",
+    "                index = vocab[w]            \n",
+    "                q.vec[index] = 0.33\n",
+    "    else:\n",
+    "        print(q.text, '[none]')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -511,27 +565,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.575504230740311\n",
-      "0.6036903795433055\n",
-      "0.6733874672136638\n",
-      "0.5199861006972385\n",
-      "0.5957414942795558\n",
-      "0.6698924800999123\n",
-      "0.6211656671104095\n",
-      "0.6881379994190577\n",
-      "0.7004741618140462\n",
-      "0.8003826045757819\n",
-      "0.5125136037479151\n",
-      "0.8143218599558374\n",
-      "0.5713745567540826\n",
-      "0.8070123619642946\n",
-      "0.7847615450816575\n",
-      "0.5158764552272019\n",
-      "0.3141127984112516\n",
-      "0.9100019823285697\n",
-      "0.6890156995883306\n",
-      "0.40706759846147117\n",
-      "[NDCG] 0.6387210523506949\n"
+      "支持陳前總統保外就醫 [pos]\n",
+      "0.5757201239264498\n",
+      "年金改革應取消或應調降軍公教月退之優存利率十八趴 [pos]\n",
+      "0.5844330101457207\n",
+      "同意動物實驗 [pos]\n",
+      "0.6701215770637953\n",
+      "油價應該凍漲或緩漲 [pos]\n"
      ]
     }
    ],
@@ -539,7 +579,7 @@
     "if not test:\n",
     "    mean = 0\n",
     "\n",
-    "    for q in train_qlist:        \n",
+    "    for q in train_qlist:\n",
     "        scores = []            \n",
     "        for d in tfdocs.values():\n",
     "            scores.append((d.doc_id, q.match_2(d.tfreq)))\n",
@@ -584,18 +624,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test = True"
+    "test = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query_Index,Query\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# load queries\n",
     "if test:\n",
@@ -612,9 +661,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query 1\n",
+      "通姦在刑法上應該除罪化 [pos]\n",
+      "Query 2\n",
+      "應該取消機車強制二段式左轉(待轉) [pos]\n",
+      "Query 3\n",
+      "支持博弈特區在台灣合法化 [pos]\n",
+      "Query 4\n",
+      "中華航空空服員罷工是合理的 [pos]\n",
+      "Query 5\n",
+      "性交易應該合法化 [pos]\n",
+      "Query 6\n",
+      "ECFA早收清單可（有）達到其預期成效 [pos]\n",
+      "Query 7\n",
+      "應該減免證所稅 [pos]\n",
+      "Query 8\n",
+      "贊成中油在觀塘興建第三天然氣接收站 [pos]\n",
+      "Query 9\n",
+      "支持中國學生納入健保 [pos]\n",
+      "Query 10\n",
+      "支持臺灣中小學（含高職、專科）服儀規定（含髮、襪、鞋）給予學生自主 [pos]\n",
+      "Query 11\n",
+      "不支持使用加密貨幣 [neg]\n",
+      "Query 12\n",
+      "不支持學雜費調漲 [neg]\n",
+      "Query 13\n",
+      "同意政府舉債發展前瞻建設計畫 [pos]\n",
+      "Query 14\n",
+      "支持電競列入體育競技 [pos]\n",
+      "Query 15\n",
+      "反對台鐵東移徵收案 [neg]\n",
+      "Query 16\n",
+      "支持陳前總統保外就醫 [pos]\n",
+      "Query 17\n",
+      "年金改革應取消或應調降軍公教月退之優存利率十八趴 [pos]\n",
+      "Query 18\n",
+      "同意動物實驗 [pos]\n",
+      "Query 19\n",
+      "油價應該凍漲或緩漲 [pos]\n",
+      "Query 20\n",
+      "反對旺旺中時併購中嘉 [neg]\n"
+     ]
+    }
+   ],
    "source": [
     "if test:\n",
     "    with open(outcsv_name, 'w') as writer:\n",
