omit english; changed sentiment function. public 0.2492

--- a/hw2/VSM.ipynb
+++ b/hw2/VSM.ipynb
@@ -571,7 +571,35 @@
       "0.5844330101457207\n",
       "同意動物實驗 [pos]\n",
       "0.6701215770637953\n",
-      "油價應該凍漲或緩漲 [pos]\n"
+      "油價應該凍漲或緩漲 [pos]\n",
+      "0.5399031567289836\n",
+      "反對旺旺中時併購中嘉 [neg]\n",
+      "0.5990541903993526\n",
+      "另立專法保障同婚是正確的 [pos]\n",
+      "0.6385719759009506\n",
+      "反對無圍牆校園 [neg]\n",
+      "0.6210006158369632\n",
+      "國際賽事會場內應該可以持中華民國國旗 [pos]\n",
+      "0.7040066921611015\n",
+      "贊同課綱微調 [pos]\n",
+      "0.6973155009736804\n",
+      "贊成流浪動物零撲殺 [pos]\n",
+      "0.7895936440196538\n",
+      "核四應該啟用 [pos]\n",
+      "0.507705945617895\n",
+      "贊成文林苑都更案可依法拆除王家 [pos]\n",
+      "0.8120092022009424\n",
+      "十二年國教高中職「免學費補助」適用對象增加是不對的 [neg]\n",
+      "0.5586355366193766\n",
+      "堅決反對政府舉債發展前瞻建設計畫 [neg]\n",
+      "0.8072300572594174\n",
+      "遠雄大巨蛋工程應停工或拆除 [pos]\n",
+      "0.7845433747537782\n",
+      "支持正名「臺灣」參與國際運動賽事 [pos]\n",
+      "0.5170271545043451\n",
+      "拒絕公投通過門檻下修 [neg]\n",
+      "0.3176032028368193\n",
+      "應該提高酒駕罰責以有效遏制酒駕 [pos]\n"
      ]
     }
    ],
