change weighting 1.2, 0.25, public 0.2512

--- a/hw2/VSM.ipynb
+++ b/hw2/VSM.ipynb
@@ -247,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6bec708316146168942c1974bbabe05",
+       "model_id": "28acbf2e618947fea551a7db7265bc21",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,7 +292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "639e7a08ab904d04bdac08911c821c6e",
+       "model_id": "4f39b2e8cbeb4072a5501f8239a606cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -331,7 +331,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e393273d57f482c828d23dafa795438",
+       "model_id": "16845ef1afaa444e8587fa993ed65ce8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
     "        for w in standlexicon['negative']:\n",
     "            if w != key:\n",
     "                index = vocab[w]            \n",
-    "                q.vec[index] = 0.33\n",
+    "                q.vec[index] = 0.25\n",
     "    elif stand == 'pos':\n",
     "        if key in vocab:\n",
     "            index = vocab[key]\n",
@@ -509,14 +509,14 @@
     "        for w in standlexicon['positive']:\n",
     "            if w != key:\n",
     "                index = vocab[w]            \n",
-    "                q.vec[index] = 0.33\n",
+    "                q.vec[index] = 0.25\n",
     "    else:\n",
     "        print(q.text, '[none]')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "scrolled": false
    },
@@ -566,40 +566,46 @@
      "output_type": "stream",
      "text": [
       "支持陳前總統保外就醫 [pos]\n",
-      "0.5757201239264498\n",
+      "0.5719725510226349\n",
       "年金改革應取消或應調降軍公教月退之優存利率十八趴 [pos]\n",
-      "0.5844330101457207\n",
+      "0.5764056173384073\n",
       "同意動物實驗 [pos]\n",
-      "0.6701215770637953\n",
+      "0.6708207692695872\n",
       "油價應該凍漲或緩漲 [pos]\n",
-      "0.5399031567289836\n",
+      "0.5407288414079174\n",
       "反對旺旺中時併購中嘉 [neg]\n",
-      "0.5990541903993526\n",
+      "0.5934011305668841\n",
       "另立專法保障同婚是正確的 [pos]\n",
-      "0.6385719759009506\n",
+      "0.6655671010399318\n",
       "反對無圍牆校園 [neg]\n",
-      "0.6210006158369632\n",
+      "0.6334006780535798\n",
       "國際賽事會場內應該可以持中華民國國旗 [pos]\n",
-      "0.7040066921611015\n",
+      "0.6980718064183704\n",
       "贊同課綱微調 [pos]\n",
-      "0.6973155009736804\n",
+      "0.6968348025070153\n",
       "贊成流浪動物零撲殺 [pos]\n",
-      "0.7895936440196538\n",
+      "0.7908819982606471\n",
       "核四應該啟用 [pos]\n",
-      "0.507705945617895\n",
+      "0.5416141106840087\n",
       "贊成文林苑都更案可依法拆除王家 [pos]\n",
-      "0.8120092022009424\n",
+      "0.8192118996753162\n",
       "十二年國教高中職「免學費補助」適用對象增加是不對的 [neg]\n",
-      "0.5586355366193766\n",
+      "0.5606224045891324\n",
       "堅決反對政府舉債發展前瞻建設計畫 [neg]\n",
-      "0.8072300572594174\n",
+      "0.7985181921152933\n",
       "遠雄大巨蛋工程應停工或拆除 [pos]\n",
-      "0.7845433747537782\n",
+      "0.7835841233673034\n",
       "支持正名「臺灣」參與國際運動賽事 [pos]\n",
-      "0.5170271545043451\n",
+      "0.521771540520549\n",
       "拒絕公投通過門檻下修 [neg]\n",
-      "0.3176032028368193\n",
-      "應該提高酒駕罰責以有效遏制酒駕 [pos]\n"
+      "0.307919497095278\n",
+      "應該提高酒駕罰責以有效遏制酒駕 [pos]\n",
+      "0.9085477171543617\n",
+      "反對二代健保規定 [neg]\n",
+      "0.6718246005051431\n",
+      "臺灣應開放含瘦肉精(萊克多巴胺)之美國牛肉進口 [pos]\n",
+      "0.3938244475320599\n",
+      "[NDCG] 0.6372761914561711\n"
      ]
     }
    ],
@@ -652,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -772,6 +778,15 @@
     "            writer.write('\\n'+q.qid)\n",
     "            for doc_id, s in scores:\n",
     "                writer.write(','+doc_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = False"
    ]
   },
   {
